fix : editor페이지 하단버튼 z-index 수정->  데스크탑 환경에서 동작 안 되는 문제 해결

--- a/src/styles/DocumentView.scss
+++ b/src/styles/DocumentView.scss
@@ -93,6 +93,10 @@
       box-sizing: border-box;
       width: 100vw;
       height: 12rem;
+      z-index: 2;
+      &.pdf-html {
+        z-index: 1;
+      }
       .flex-wrap {
         display: flex;
         width: 100vw;
